ECA-1885: Single transaction certificate issuance from CMP or EJBCA WS can now be configured for each CA to not store UserData and/or issued certificates in the database.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10332 37aeb1de-b14b-0410-9a0e-82b28170d228